--- a/readme.html
+++ b/readme.html
@@ -538,13 +538,13 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI>Base parameters changed to use m<sub>nu</sub> rather than f<sub>nu</sub>; several new chain and derived parameters supported and output by default.
 <LI>New best-fit finding routine (action=2) uses Powell's 2009 bounded BOBYQA routine (faster and reliable with bounded
-    parameters). Best-fit parameter values written out including derived parameters. 
-<LI>estimate_propose_matrix outputs file in named parameter .covmat compatible format (still does not work with bounded parameters)
+    parameters). Best-fit parameter values written out including derived parameters.
+<LI>estimate_propose_matrix outputs file in named parameter .covmat compatible format 
 <LI>Input parameter <B>num_massive_neutrinos</B> for use with the <b>mnu</b> parameter (e.g. can fix to 0.06 with num_massive_neutrinos=1 to approximate minimal hierarchy)
 <LI>CAMB updated, including tweaked recfast model and support for compiling CosmoMC with CosmoRec and HyRec recombination codes; updated halofit model
 <LI>.ini files support reading in file of default parameter values that can then be overridden (greatly reduce duplication between similar runs), e.g. DEFAULT(baseparameter_defaults.ini);  can be used in nested way, and with INCLUDE.
 <LI>Links by default with CAMB simplified ppf module for varying w (parameter <b>wa</b>).
-<LI>Option to compile with CLIK    
+<LI>Option to compile with CLIK
 <LI>Added new Planck-like .covmat files and common/batch input parameter set .ini files.
 </UL>
 
