--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>This version September 2012</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>This version Planck-only XXX 2013</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -534,18 +534,22 @@ weighting function or parameter mapping.</ul>
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
-<LI><B>XXX 2013</B><BR>
+<LI><B>non-public Planck-only changes</B><BR>
 <UL>
 <LI>Base parameters changed to use m<sub>nu</sub> rather than f<sub>nu</sub>; several new chain and derived parameters supported and output by default.
-<LI>New best-fit finding routine (action=2) uses Powell's 2009 bounded BOBYQA routine (faster and reliable with bounded
-    parameters). Best-fit parameter values written out including derived parameters.
-<LI>estimate_propose_matrix outputs file in named parameter .covmat compatible format 
 <LI>Input parameter <B>num_massive_neutrinos</B> for use with the <b>mnu</b> parameter (e.g. can fix to 0.06 with num_massive_neutrinos=1 to approximate minimal hierarchy)
-<LI>CAMB updated, including tweaked recfast model and support for compiling CosmoMC with CosmoRec and HyRec recombination codes; updated halofit model
-<LI>.ini files support reading in file of default parameter values that can then be overridden (greatly reduce duplication between similar runs), e.g. DEFAULT(baseparameter_defaults.ini);  can be used in nested way, and with INCLUDE.
 <LI>Links by default with CAMB simplified ppf module for varying w (parameter <b>wa</b>).
 <LI>Option to compile with CLIK
 <LI>Added new Planck-like .covmat files and common/batch input parameter set .ini files.
+</UL>
+
+<LI><B>October 2012</B><BR>
+<UL>
+<LI>New best-fit finding routine (action=2) uses Powell's 2009 bounded BOBYQA routine (faster and reliable with bounded
+    parameters). Best-fit parameter values written out including derived parameters.
+<LI>estimate_propose_matrix outputs file in named parameter .covmat compatible format and copes better with parameters with hard prior cuts
+<LI>CAMB October 2012 update: tweaked recfast model and support for compiling CosmoMC with CosmoRec and HyRec recombination codes; updated halofit model
+<LI>.ini files support reading in file of default parameter values that can then be overridden (greatly reduce duplication between similar runs), e.g. DEFAULT(baseparameter_defaults.ini);  can be used in nested way, and with INCLUDE.
 </UL>
 
 <LI><B>January 2012</B><BR>
