v minor f2003 compatibility changes

--- a/readme.html
+++ b/readme.html
@@ -536,6 +536,7 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI><B>October 2012</B><BR>
 <UL>
+<LI>[9 Oct] minor changes for gfortran/f95 compatibility
 <LI>New best-fit finding routine (action=2) uses <A HREF="http://www.damtp.cam.ac.uk/user/na/NA_papers/NA2009_06.pdf">Powell's  2009 BOBYQA</A> routine (faster and reliable with bounded
     parameters). Best-fit parameter values written out including derived parameters.
 <LI>estimate_propose_matrix outputs file in named parameter .covmat compatible format and copes better with parameters with hard prior cuts
