--- a/readme.html
+++ b/readme.html
@@ -536,6 +536,7 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI><B>non-public Planck-only changes</B><BR>
 <UL>
+<LI>Output .initparams file for each chain giving input parameters used
 <LI>Base parameters changed to use m<sub>nu</sub> rather than f<sub>nu</sub>; several new chain and derived parameters supported and output by default.
 <LI>Input parameter <B>num_massive_neutrinos</B> for use with the <b>mnu</b> parameter (e.g. can fix to 0.06 with num_massive_neutrinos=1 to approximate minimal hierarchy)
 <LI>Links by default with CAMB simplified ppf module for varying w (parameter <b>wa</b>).
