TCMB changed to 2.7255; getdist fixes, updated covmat

--- a/readme.html
+++ b/readme.html
@@ -536,6 +536,8 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI><B>non-public Planck-only changes</B><BR>
 <UL>
+<LI>T_CMB changed to 2.7255
+<LI>GetDist change for making large arrays of 1D plots not too small; matlab_subplot_size_inch, matlab_plot_output parameters (corresponding for 2D,3D not done yet)
 <LI>added <b>prior[xxx]=mean std</b> inputs to specific Gaussian priors on parameters; removed Use_BBN
 <LI>cliklike_CamSpec.f90 to call high-L and camSpec likelihoods without clik (swaps with cliklike.f90)
 <LI>Output .initparams file for each chain giving input parameters used
