--- a/readme.html
+++ b/readme.html
@@ -537,7 +537,9 @@ weighting function or parameter mapping.</ul>
 <LI><B>non-public Planck-only changes</B><BR>
 <UL>
 <LI>T_CMB changed to 2.7255
+<LI><b>lmax_computed_cl</b> to define CAMB maximum L; higher L are approximated by scaling fixed template file (highL_theory_cl_template), for use where non-primordial contributions dominate.
 <LI>GetDist change for making large arrays of 1D plots not too small; matlab_subplot_size_inch, matlab_plot_output parameters (corresponding for 2D,3D not done yet)
+<LI>Input parameters use_WMAP_TT_beam_ptsrc, use_WMAP_TE, use_WMAP_TT that can all be set to false to use only WMAP low L
 <LI>added <b>prior[xxx]=mean std</b> inputs to specific Gaussian priors on parameters; removed Use_BBN
 <LI>cliklike_CamSpec.f90 to call high-L and camSpec likelihoods without clik (swaps with cliklike.f90)
 <LI>Output .initparams file for each chain giving input parameters used
