--- a/readme_planck.html
+++ b/readme_planck.html
@@ -19,7 +19,7 @@ As usual, e.g. <b>perl runMPI.pl batch1/base 4</b>.
 <p>
 The runMPI_HPCS.pl sample script also supports best-fit runs, using last parameter zero: e.g. if ini has action=2 then run <b>perl runMPI_HPCS batch1/ini 0</b>.
 <p>
-The <b>lmax_computed_cl</b> parameter is set up with defaults (hopefully) appropriate for the various data combinations (eg. in CAMspec_defaults.ini, CAMspec_ACTSPT_defaults.ini). The settings.f90 lmax is fixed, and set to a high value.
+The <b>lmax_computed_cl</b> parameter is set up with defaults (hopefully) appropriate for the various data combinations (eg. in CAMspec_defaults.ini, CAMspec_ACTSPT_defaults.ini). The cmbtypes.f90 lmax is fixed, and set to a high value.
 <p>
 For initial explorations you can use settings in batch1/fast_approx.ini.
 <P>
