--- a/readme.html
+++ b/readme.html
@@ -538,7 +538,8 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI>HST data updated to Riess et al: 1103.2976 (from BOSS mod)
 <LI><b>action=3</b> to find best-fit and hessian (if it works!), and then stop; output .hessian.covmat file and best-fit
-<LI>T_CMB changed to 2.7255 
+<LI><b>start_at_bestfit = T</b> option to start chains at best fit point (if true, be careful with convergence since non-dispersed)
+<LI>T_CMB changed to 2.7255
 <LI><b>lmax_computed_cl</b> to define CAMB maximum L; higher L are approximated by scaling fixed template file (highL_theory_cl_template), for use where non-primordial contributions dominate.
 <LI>GetDist change for making large arrays of 1D plots not too small; matlab_subplot_size_inch, matlab_plot_output parameters (corresponding for 2D,3D not done yet)
 <LI>Input parameters use_WMAP_TT_beam_ptsrc, use_WMAP_TE, use_WMAP_TT that can all be set to false to use only WMAP low L
