--- a/camb/readme.html
+++ b/camb/readme.html
@@ -115,7 +115,9 @@ where all quantities are in the synchronous gauge and evaluated at the requested
 
 <B>xx 2012</B><BR>
 <UL>
+<LI>Derived parameter r_s now use accurate result for the sound speed (CosmoMC theta unchanged)
 <LI>Updated default T_CMB=2.7255 to match Planck default assumption
+<LI>modules.f90 utility functions: Hofz and dsound_da_exact
 </UL>
 
 <B>October 2012</B><BR>
