added matlab mscripts/getdist_xxx plot scripts

--- a/readme_planck.html
+++ b/readme_planck.html
@@ -57,7 +57,7 @@ Scripts include:
 <LI>runBatch.py: submit runs to a job submission script
 <LI>runGridGetdist.py: make getdist .ini files and run getdist over grid of models.
 </UL>
-Many scripts have standardized input parameters to restrict to subsets of grid items, e.g. filtering by importance sampling run, no importance sampling, or specific item name.
+Many scripts have standardized input parameters to restrict to subsets of grid items, e.g. filtering by importance sampling run, no importance sampling, or specific item name (pattern match).
 
 <h2>To do</h2>
 
