fixed bunch of bugs in limits convergence testing; rearranged parameterization, input H0_min and H0_max parameters

--- a/readme.html
+++ b/readme.html
@@ -536,6 +536,7 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI><B>non-public Planck-only changes (for now)</B><BR>
 <UL>
+<LI>Reorganized parameterization class and module implementation; can now set H0_min and H0_max as .ini input parameters
 <LI>Added SNLS supernovae and updated Union to Union 2.1
 <LI>Getdist removed sm support. Added python/GetDistPlots.py with fairly general plotting support.
 <LI>Added <b>use_lensing_potential</b> and <b>use_nonlinear_lensing</b> (currently can't be used with any LSS data; also note that it is not calculated consistency when only the initial power spectra are changed). Changed default num_cls_ext=1.
